--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.7.0",
+		"@emotion/styled": "^11.6.0",
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
+		"@mui/material": "^5.2.2",
 		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
+		"material-ui-audio-player": "^1.7.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-howler": "^5.2.0",
 		"react-icons": "^4.3.1",
+		"react-jinke-music-player": "^4.24.2",
 		"react-player": "^2.9.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"realtime-bpm-analyzer": "^2.1.6",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
