before last commit

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
 		"axios": "^0.24.0",
 		"material-ui-audio-player": "^1.7.1",
 		"react": "^17.0.2",
+		"react-audio-player": "^0.17.0",
+		"react-calendar": "^3.5.0",
+		"react-digital-clock": "^0.1.2",
 		"react-dom": "^17.0.2",
 		"react-howler": "^5.2.0",
 		"react-icons": "^4.3.1",
-		"react-jinke-music-player": "^4.24.2",
 		"react-player": "^2.9.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-select": "^5.2.1",
 		"realtime-bpm-analyzer": "^2.1.6",
 		"web-vitals": "^1.1.2"
 	},
