--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
 		"material-ui-audio-player": "^1.7.1",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-audio-player": "^0.17.0",
+		"react-big-calendar": "^0.38.1",
 		"react-calendar": "^3.5.0",
 		"react-digital-clock": "^0.1.2",
 		"react-dom": "^17.0.2",
